--- a/modules/kubernetes_node_pool/aws_karpenter/facets.yaml
+++ b/modules/kubernetes_node_pool/aws_karpenter/facets.yaml
@@ -43,11 +43,11 @@ spec:
           type: string
           title: CPU Architectures
           description: Comma-separated architectures to support.
-          default: x86_64,arm64
+          default: amd64,arm64
           enum:
-          - x86_64
+          - amd64
           - arm64
-          - x86_64,arm64
+          - amd64,arm64
         capacity_types:
           type: string
           title: Instance Pricing
@@ -244,7 +244,7 @@ sample:
     instance_requirements:
       instance_families: c5,m5,r5
       cpu_range: 4,8,16
-      architectures: x86_64,arm64
+      architectures: amd64,arm64
       capacity_types: spot,on-demand
     scaling:
       max_cpu: '500'
