changed to string lambda_version

--- a/modules/aws_lambda_permission/default/0.1/facets.yaml
+++ b/modules/aws_lambda_permission/default/0.1/facets.yaml
@@ -42,4 +42,4 @@ sample:
         action: lambda:InvokeFunction
         principal: events.amazonaws.com
     lambda_name: ''
-    lambda_version: null
+    lambda_version: '0.1'
