corrected the description

--- a/modules/kubernetes_secret/k8s/0.3/facets.yaml
+++ b/modules/kubernetes_secret/k8s/0.3/facets.yaml
@@ -1,7 +1,7 @@
 intent: kubernetes_secret
 flavor: k8s
 version: '0.3'
-description: "kubernetes_secret - k8s"
+description: kubernetes_secret - k8s
 clouds:
 - aws
 - azure
@@ -15,9 +15,9 @@ spec:
       type: object
       description: Data objects containing key, value pair
       patternProperties:
-        "^[a-zA-Z0-9_.-]*$":
+        ^[a-zA-Z0-9_.-]*$:
           title: Data Object Block
-          description: something
+          description: Data object block containing key, value pair
           type: object
           properties:
             key:
@@ -30,8 +30,7 @@ spec:
               type: string
               x-ui-textarea: true
 sample:
-  $schema: >-
-    https://facets-cloud.github.io/facets-schemas/schemas/kubernetes_secret/kubernetes_secret.schema.json
+  $schema: https://facets-cloud.github.io/facets-schemas/schemas/kubernetes_secret/kubernetes_secret.schema.json
   kind: kubernetes_secret
   disabled: true
   flavor: k8s
