reading from spec

--- a/modules/kubernetes_secret/k8s/0.3/facets.yaml
+++ b/modules/kubernetes_secret/k8s/0.3/facets.yaml
@@ -1,5 +1,5 @@
 intent: kubernetes_secret
-flavor: k8s
+flavor: rauni
 version: '0.3'
 description: kubernetes_secret - k8s
 clouds:
@@ -10,6 +10,14 @@ clouds:
 spec:
   type: object
   properties:
+    skip_base64_encode:
+      title: Skip Base64 Encode
+      description: Set to `true` if the corresponding 'data' value is already Base64
+        encoded and should therefore bypass the module's automatic Base64 encoding
+        process. When `true`, the provided data will be used as-is. Set to `false`
+        (default) if the data is plain text and requires Base64 encoding by the module.
+      type: boolean
+      default: false
     data:
       title: Data
       type: object
@@ -32,7 +40,7 @@ spec:
 sample:
   kind: kubernetes_secret
   disabled: true
-  flavor: k8s
+  flavor: rauni
   version: '0.3'
   metadata: {}
   spec:
