--- a/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
@@ -10,6 +10,9 @@ inputs:
     default:
       resource_type: network
       resource_name: default
+outputs:
+  default:
+    type: "@outputs/aws_eks"
 spec:
   title: Kubernetes Cluster
   description: Specification of the kubernetes cluster for aws eks flavor
