--- a/outputs/aws_eks/output.facets.yaml
+++ b/outputs/aws_eks/output.facets.yaml
@@ -8,7 +8,7 @@ out:
       type: object
       description: Attributes of the AWS EKS module outputs
       properties:
-        legacy_outputs:
+        legacy_attributes:
           type: object
           description: Legacy outputs for backward compatibility
           properties:
