--- a/outputs/aws_vpc/output.facets.yaml
+++ b/outputs/aws_vpc/output.facets.yaml
@@ -8,7 +8,7 @@ out:
       type: object
       description: Attributes of the VPC module outputs
       properties:
-        legacy_outputs:
+        legacy_attributes:
           type: object
           description: Legacy outputs for backward compatibility
           properties:
