Revert "updated the legacy_outputs to legacy_attributes"
This reverts commit d5bf4c1887cfd68aa72b71b2043ab9bf2030561b.

--- a/outputs/aws_vpc/output.facets.yaml
+++ b/outputs/aws_vpc/output.facets.yaml
@@ -8,7 +8,7 @@ out:
       type: object
       description: Attributes of the VPC module outputs
       properties:
-        legacy_attributes:
+        legacy_outputs:
           type: object
           description: Legacy outputs for backward compatibility
           properties:
