[SYNC] Develop to Master (#408)
* if price is 0, exclude from dataset (#174)

* if price is 0, exclude from dataset

* removed .DS_Store

* added generated files

* removed incorrect files (#176)

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit a6777ed38ae92ffe1e98c09a6f097410634c104d.

* if price is 0, exclude from dataset (#174)

* if price is 0, exclude from dataset

* removed .DS_Store

* added generated files

* removed incorrect files (#176)

* [S73] Feature: Per-Instance Artifactories Module (#210)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit a6777ed38ae92ffe1e98c09a6f097410634c104d.

* [S73] Feature: Per-Instance Artifactories Module (#215)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* added intent level output

* Artifactories Terraform Module (#228)

* added artifactories module

* updates to vault module

* removed facets yaml outputs

* added gitignore files

* Cleaned up ignored files

* Cleaned up ignored files

* Cleaned up ignored files

* added artifactories module

* updated to vault facets.yaml

* terraform fmt

* deleted zip_modules.py

* updated module source

* updated to work with github app

(cherry picked from commit 122c9dc28b355bfe612e98f026decf2195beb507)

* Innersourcing workflows (#230)

* added zip modules py

* updated the print statement

* modified the print message in zip_modules.py

* Implement concurrent zipping and uploading to S3 in zip_modules.py

* Update publish workflow to run 

--- a/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
@@ -1,6 +1,5 @@
 intent: kubernetes_cluster
 flavor: aws_eks
-alias-flavors: ["default"]
 version: "0.2"
 description: Adds kubernetes cluster - eks flavor
 clouds:
@@ -11,6 +10,9 @@ inputs:
     default:
       resource_type: network
       resource_name: default
+outputs:
+  default:
+    type: "@outputs/aws_eks"
 spec:
   title: Kubernetes Cluster
   description: Specification of the kubernetes cluster for aws eks flavor
