--- a/modules/kubernetes_cluster/gcp_gke/0.1/facets.yaml
+++ b/modules/kubernetes_cluster/gcp_gke/0.1/facets.yaml
@@ -1,10 +1,12 @@
 intent: kubernetes_cluster
 flavor: gcp_gke
-alias-flavors: ["default"]
 version: "0.1"
 description: Adds kubernetes cluster - gke flavor
 clouds:
 - gcp
+outputs:
+  default:
+    type: "@outputs/gcp_gke"
 inputs:
   network_details:
     type: "@outputs/gcp_vpc"
