--- a/modules/mongo/atlas/0.1/facets.yaml
+++ b/modules/mongo/atlas/0.1/facets.yaml
@@ -5,7 +5,7 @@ description: Adds mongo - atlas flavor
 clouds:
 - azure
 inputs:
-  atlas_account_details:
+  atlas_account:
     type: '@outputs/atlas_account'
     optional: false
     providers:
